<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_item_trending"
        android:title="@string/trending" />
    <item
        android:id="@+id/menu_item_favorites"
        android:title="@string/favorites" />
    <item
        android:id="@+id/menu_item_my_lists"
        android:title="@string/my_lists" />
    <item
        android:id="@+id/menu_item_ratings"
        android:title="@string/ratings" />
    <item
        android:id="@+id/menu_item_watchlists"
        android:title="@string/watchlists" />
    <item
        android:id="@+id/login_button"
        android:title="@string/login_button" />
    <item
        android:id="@+id/logout_button"
        android:title="@string/logout_button" />
</menu>