<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/material_card_view_my_lists_item"
    style="@style/Widget.MovieSearcher.CardView.LineCardView"
    android:layout_width="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">

    <LinearLayout
        android:id="@+id/material_card_view_constraint_layout_my_lists_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_my_lists_item_name"
            style="@style/Widget.MovieSearcher.TextMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <!--            //bug on API side https://trello.com/c/slruAstb/75-return-a-proper-response-when-lists-are-deleted-->
        <!--            <ImageButton-->
        <!--                android:id="@+id/image_button_delete_list"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginTop="8dp"-->
        <!--                android:layout_marginEnd="8dp"-->
        <!--                android:src="@android:drawable/ic_delete"-->
        <!--                app:layout_constraintEnd_toEndOf="parent"-->
        <!--                app:layout_constraintTop_toTopOf="parent" />-->
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>